hbase-sdk-dsl/src/main/java/com/github/CCwexiao/hbase/sdk/dsl/antlr/HBaseSQLParser.java
// Generated from ./HBaseSQL.g4 by ANTLR 4.5.1

package com.github.CCwexiao.hbase.sdk.dsl.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HBaseSQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, LR_BRACKET=3, RR_BRACKET=4, COMMA=5, SEMICOLON=6, EQ=7, 
		NOTEQ=8, NOT_EQ=9, GREATER=10, GREATEREQUAL=11, LESS=12, LESSEQUAL=13, 
		PLUS=14, MINUS=15, ASTERISK=16, SLASH=17, MOD=18, IS=19, NOTMATCH=20, 
		MATCH=21, BETWEEN=22, MISSING=23, LIMIT=24, TS=25, STARTTS=26, ENDTS=27, 
		CREATE=28, INSERT=29, INTO=30, VALUES=31, SELECT=32, UPDATE=33, SET=34, 
		DELETE=35, FROM=36, TABLE=37, COLUMNFAMILY=38, WHERE=39, AND=40, OR=41, 
		IN=42, LIKE=43, NULL=44, NOT=45, INTEGER=46, ROWKEY=47, STARTKEY=48, ENDKEY=49, 
		MAXVERSION=50, ID=51, STRING=52, SPACE=53, COMMENT_INPUT=54, LINE_COMMENT=55;
	public static final int
		RULE_query = 0, RULE_createTableStatement = 1, RULE_tableName = 2, RULE_columnFamily = 3, 
		RULE_column = 4, RULE_funcname = 5, RULE_selectColList = 6, RULE_columnList = 7, 
		RULE_columnFamilyList = 8, RULE_insertStatement = 9, RULE_multiValueList = 10, 
		RULE_valueList = 11, RULE_value = 12, RULE_selectStatement = 13, RULE_deleteStatement = 14, 
		RULE_rowKeyRangeExp = 15, RULE_rowKeyExp = 16, RULE_funcParamsList = 17, 
		RULE_tsRange = 18, RULE_constant = 19, RULE_constantList = 20, RULE_var = 21, 
		RULE_multiVersionExp = 22, RULE_maxVersionExp = 23, RULE_integer = 24, 
		RULE_tsExp = 25, RULE_timestamp = 26, RULE_wherec = 27, RULE_conditionc = 28, 
		RULE_limitExp = 29;
	public static final String[] ruleNames = {
		"query", "createTableStatement", "tableName", "columnFamily", "column", 
		"funcname", "selectColList", "columnList", "columnFamilyList", "insertStatement", 
		"multiValueList", "valueList", "value", "selectStatement", "deleteStatement", 
		"rowKeyRangeExp", "rowKeyExp", "funcParamsList", "tsRange", "constant", 
		"constantList", "var", "multiVersionExp", "maxVersionExp", "integer", 
		"tsExp", "timestamp", "wherec", "conditionc", "limitExp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'''", "'#'", "'('", "')'", "','", "';'", "'='", "'!='", "'<>'", 
		"'>'", "'>='", "'<'", "'<='", "'+'", "'-'", "'*'", "'/'", "'%'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "LR_BRACKET", "RR_BRACKET", "COMMA", "SEMICOLON", "EQ", 
		"NOTEQ", "NOT_EQ", "GREATER", "GREATEREQUAL", "LESS", "LESSEQUAL", "PLUS", 
		"MINUS", "ASTERISK", "SLASH", "MOD", "IS", "NOTMATCH", "MATCH", "BETWEEN", 
		"MISSING", "LIMIT", "TS", "STARTTS", "ENDTS", "CREATE", "INSERT", "INTO", 
		"VALUES", "SELECT", "UPDATE", "SET", "DELETE", "FROM", "TABLE", "COLUMNFAMILY", 
		"WHERE", "AND", "OR", "IN", "LIKE", "NULL", "NOT", "INTEGER", "ROWKEY", 
		"STARTKEY", "ENDKEY", "MAXVERSION", "ID", "STRING", "SPACE", "COMMENT_INPUT", 
		"LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HBaseSQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HBaseSQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public CreateTableStatementContext createTableStatement() {
			return getRuleContext(CreateTableStatementContext.class,0);
		}
		public InsertStatementContext insertStatement() {
			return getRuleContext(InsertStatementContext.class,0);
		}
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public DeleteStatementContext deleteStatement() {
			return getRuleContext(DeleteStatementContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			setState(64);
			switch (_input.LA(1)) {
			case CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				createTableStatement();
				}
				break;
			case INSERT:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				insertStatement();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				selectStatement();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 4);
				{
				setState(63);
				deleteStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableStatementContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(HBaseSQLParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(HBaseSQLParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode LR_BRACKET() { return getToken(HBaseSQLParser.LR_BRACKET, 0); }
		public ColumnFamilyListContext columnFamilyList() {
			return getRuleContext(ColumnFamilyListContext.class,0);
		}
		public TerminalNode RR_BRACKET() { return getToken(HBaseSQLParser.RR_BRACKET, 0); }
		public CreateTableStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitCreateTableStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableStatementContext createTableStatement() throws RecognitionException {
		CreateTableStatementContext _localctx = new CreateTableStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_createTableStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(CREATE);
			setState(67);
			match(TABLE);
			setState(68);
			tableName();
			setState(69);
			match(LR_BRACKET);
			setState(70);
			columnFamilyList();
			setState(71);
			match(RR_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HBaseSQLParser.ID, 0); }
		public TableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitTableName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableNameContext tableName() throws RecognitionException {
		TableNameContext _localctx = new TableNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tableName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnFamilyContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HBaseSQLParser.ID, 0); }
		public ColumnFamilyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnFamily; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitColumnFamily(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnFamilyContext columnFamily() throws RecognitionException {
		ColumnFamilyContext _localctx = new ColumnFamilyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_columnFamily);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HBaseSQLParser.ID, 0); }
		public ColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitColumn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnContext column() throws RecognitionException {
		ColumnContext _localctx = new ColumnContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_column);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncnameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HBaseSQLParser.ID, 0); }
		public FuncnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcname; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitFuncname(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncnameContext funcname() throws RecognitionException {
		FuncnameContext _localctx = new FuncnameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectColListContext extends ParserRuleContext {
		public SelectColListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectColList; }
	 
		public SelectColListContext() { }
		public void copyFrom(SelectColListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ColList_StarContext extends SelectColListContext {
		public ColList_StarContext(SelectColListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitColList_Star(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ColList_ColListContext extends SelectColListContext {
		public ColumnListContext columnList() {
			return getRuleContext(ColumnListContext.class,0);
		}
		public ColList_ColListContext(SelectColListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitColList_ColList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectColListContext selectColList() throws RecognitionException {
		SelectColListContext _localctx = new SelectColListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_selectColList);
		try {
			setState(83);
			switch (_input.LA(1)) {
			case ASTERISK:
				_localctx = new ColList_StarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				match(ASTERISK);
				}
				break;
			case ID:
				_localctx = new ColList_ColListContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				columnList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnListContext extends ParserRuleContext {
		public List<ColumnContext> column() {
			return getRuleContexts(ColumnContext.class);
		}
		public ColumnContext column(int i) {
			return getRuleContext(ColumnContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(HBaseSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HBaseSQLParser.COMMA, i);
		}
		public ColumnListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitColumnList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnListContext columnList() throws RecognitionException {
		ColumnListContext _localctx = new ColumnListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_columnList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			column();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(86);
				match(COMMA);
				setState(87);
				column();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnFamilyListContext extends ParserRuleContext {
		public List<ColumnFamilyContext> columnFamily() {
			return getRuleContexts(ColumnFamilyContext.class);
		}
		public ColumnFamilyContext columnFamily(int i) {
			return getRuleContext(ColumnFamilyContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(HBaseSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HBaseSQLParser.COMMA, i);
		}
		public ColumnFamilyListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnFamilyList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitColumnFamilyList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnFamilyListContext columnFamilyList() throws RecognitionException {
		ColumnFamilyListContext _localctx = new ColumnFamilyListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_columnFamilyList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			columnFamily();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(94);
				match(COMMA);
				setState(95);
				columnFamily();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsertStatementContext extends ParserRuleContext {
		public TerminalNode INSERT() { return getToken(HBaseSQLParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(HBaseSQLParser.INTO, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode LR_BRACKET() { return getToken(HBaseSQLParser.LR_BRACKET, 0); }
		public ColumnListContext columnList() {
			return getRuleContext(ColumnListContext.class,0);
		}
		public TerminalNode RR_BRACKET() { return getToken(HBaseSQLParser.RR_BRACKET, 0); }
		public TerminalNode VALUES() { return getToken(HBaseSQLParser.VALUES, 0); }
		public MultiValueListContext multiValueList() {
			return getRuleContext(MultiValueListContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(HBaseSQLParser.WHERE, 0); }
		public TerminalNode TS() { return getToken(HBaseSQLParser.TS, 0); }
		public TerminalNode EQ() { return getToken(HBaseSQLParser.EQ, 0); }
		public TsExpContext tsExp() {
			return getRuleContext(TsExpContext.class,0);
		}
		public InsertStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insertStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitInsertStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsertStatementContext insertStatement() throws RecognitionException {
		InsertStatementContext _localctx = new InsertStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_insertStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(INSERT);
			setState(102);
			match(INTO);
			setState(103);
			tableName();
			setState(104);
			match(LR_BRACKET);
			setState(105);
			columnList();
			setState(106);
			match(RR_BRACKET);
			setState(107);
			match(VALUES);
			setState(108);
			multiValueList();
			setState(113);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(109);
				match(WHERE);
				setState(110);
				match(TS);
				setState(111);
				match(EQ);
				setState(112);
				tsExp();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiValueListContext extends ParserRuleContext {
		public List<TerminalNode> LR_BRACKET() { return getTokens(HBaseSQLParser.LR_BRACKET); }
		public TerminalNode LR_BRACKET(int i) {
			return getToken(HBaseSQLParser.LR_BRACKET, i);
		}
		public List<ValueListContext> valueList() {
			return getRuleContexts(ValueListContext.class);
		}
		public ValueListContext valueList(int i) {
			return getRuleContext(ValueListContext.class,i);
		}
		public List<TerminalNode> RR_BRACKET() { return getTokens(HBaseSQLParser.RR_BRACKET); }
		public TerminalNode RR_BRACKET(int i) {
			return getToken(HBaseSQLParser.RR_BRACKET, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(HBaseSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HBaseSQLParser.COMMA, i);
		}
		public MultiValueListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiValueList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitMultiValueList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiValueListContext multiValueList() throws RecognitionException {
		MultiValueListContext _localctx = new MultiValueListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_multiValueList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(LR_BRACKET);
			setState(116);
			valueList();
			setState(117);
			match(RR_BRACKET);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(118);
				match(COMMA);
				setState(119);
				match(LR_BRACKET);
				setState(120);
				valueList();
				setState(121);
				match(RR_BRACKET);
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueListContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(HBaseSQLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(HBaseSQLParser.COMMA, i);
		}
		public ValueListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valueList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HBaseSQLVisitor ) return ((HBaseSQLVisitor<? extends T>)visitor).visitValueList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValueListContext valueList() throws RecognitionException {
		ValueListContext _localctx = new ValueListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_valueList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			value();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(129);
				match(COMMA);
				setState(130);
				value();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
